service/tests/models/snapshots/roles/can_update_role_and_normalize_name@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "vip customer",
        description: Some(
            "Priority shoppers",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
