service/tests/models/snapshots/roles/can_update_role_name_only@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "buyer",
        description: Some(
            "Regular shoppers",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
