service/tests/models/snapshots/roles/can_update_role_with_name_and_description@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "wholesale buyer",
        description: Some(
            "Bulk order customers",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
