service/tests/models/snapshots/roles/can_update_role_with_same_name@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "administrator",
        description: Some(
            "Full system access",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
