service/tests/models/snapshots/roles/cannot_create_role_when_name_differs_by_case_and_whitespace@roles.snap
---
source: tests/models/roles.rs
assertion_line: 101
expression: result
---
Err(
    EntityAlreadyExists(
        "Role manager already exists",
    ),
)
