service/tests/models/snapshots/roles/cannot_update_role_when_name_already_exists@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Role administrator already exists",
    ),
)
