service/tests/models/snapshots/roles/new_role_validation_rejects_long_name@roles.snap
---
source: tests/models/roles.rs
assertion_line: 143
expression: result
---
Err(
    "Validation error: {\"name\":\"Name must be under 32 letters\"}",
)
