service/tests/models/snapshots/roles/update_role_validation_rejects_empty_name@roles.snap
---
source: tests/models/roles.rs
assertion_line: 167
expression: result
---
Err(
    "Validation error: {\"name\":\"Name is required\"}",
)
